--- a/master_merge.ipynb
+++ b/master_merge.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "def connect():\n",
     "   user = \"root\"\n",
-    "   password = \"\"\n",
+    "   password = \"1981renaldada\"\n",
     "   host = \"localhost\"\n",
     "   db = \"lp_vs_gerrit_metrics\"\n",
     "   port=3306\n",
